Fixed width of column on mobile with col-10

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ body {
 
 .containerreview {
     height: 100%;
-    background-color: ;
+    background-color: greenyellow;
 }
 
 
